--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorGrayLight">#DADFE1</color>
+    <color name="colorGrayDark">#7f8c8d</color>
+    <color name="colorTextPrimary">#2c3e50</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
