--- a/app/src/main/res/layout/activity_groups.xml
+++ b/app/src/main/res/layout/activity_groups.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorGrayLight"
+    android:weightSum="4"
+    >
+    <ImageView
+        android:layout_weight="2"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:src="@drawable/youre_awesome"
+        android:scaleType="centerCrop"
+        />
     <android.support.v7.widget.RecyclerView
+        android:layout_weight="2"
         android:id="@+id/students"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
