refactor(Activites): Activites moved to activity package.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="innopolis.less.registration.MainActivity">
+    tools:context="innopolis.less.registration.activites.MainActivity">
 
     <ImageView
         android:id="@+id/imageView"
