--- a/app/src/main/res/layout/fragment_students.xml
+++ b/app/src/main/res/layout/fragment_students.xml
@@ -4,12 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="innopolis.less.registration.fragments.StudentsFragment">
-
-    <TextView
-        android:text="Hello world"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/list_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
